# movement-tracker

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  init.sql
.github/workflows/: docker-image.yml
.sqlx/: query-04bad3724ad1b0a84cc840f15c80c1ed7d2bd35a909b18df9d2a60d1a48cae6c.json  query-06dc708428d5cd34becf54272271dbde5e6fe51aa85d0d5ccc4ec07c3866ebfd.json  query-0870d0c01751c13b52efa36cafb064eb29a5ed05f93cd7c3a88787d2ee78c6a1.json  query-089037590a49960e3169d5840fb3780f3c5c61e0358d0052400b2f2e1bd76381.json  query-0d7bb40dc7cc7e5eea880d8e446c217face12d33a27b16b637123655b5a3bc24.json  query-150390f23cb4ba146a404605cba0f5868206718c8c8e366b4321ef7bc189b2a4.json  query-163dad7e57ed5e8bd84c3ffbf20ad71ceb5e2b2158b529cc4a828078b4820586.json  query-17b4814cc976e1e84dea3c65fd59106825fffebe69f07ba6f3c6902a73b764e5.json  query-18dc29c237a8e1c4b681c65f2cd5b2a117a83cbbf1fe5c4351f46ad08122b05d.json  query-1b09e62637e527c2c3e2416fe310aa1f940fe60911e31eb3319da8c26b6cfd81.json  query-1cdf39c9224066b6195fff46bff2a6c2d3ff4116cddf98b8e48f964b1613e4b2.json  query-1e6e73119936eade21a5313b47ad4e7006c0d819ae1481e00bdbcc12e20e4833.json  query-263330b8faac02b35ed02a35f6d683c69b8055ee5d72f6417fe383559112bf12.json  query-2698792196d151d13e62157b43442f1936c2389930ade3b35e1391e6a800e197.json  query-272ca66aa01e0c20d58f23395baca03254c4488a2af4b90c4ecb791484b3bfc7.json  query-29acb04bb2441e4638ef9314552f642d5315f4e182853bd4b34b2c939b95322d.json  query-2a96df0e4e9ed1c636eb9d7bfb8ba0f94095304bb8da8578b880f07d32bc2ecc.json  query-2c87c2e2cce16371bb87ff5bb43a63cae3bdaa49c4c73948891c961f8562208a.json  query-2e0d3671dcd86331f2c440c84ccee268e9ce18ab7d5e0034746d4204b192c82f.json  query-2f0d546e44b3cfc9db9a9a4794ee0847b005cfac2172a4ef217f16eadc95d7bd.json  query-34080230eb0f62a60a9ff5fc4fe5a0209e2a9ade7c031309fc522e78e08c8fe2.json  query-38ebc180b7302c0ea6f455a43a5c49a80b57ea8ee12dd0266d77b4ee41198777.json  query-39e2fad02b5e041006f517d60f76f7d6c05390c2727dc4a4ed4d318aa7329ad2.json  query-3aa32598b10d8db8c076bef122306b487382db44a1d0ef076cda29b5e3bc7e27.json  query-3ddf45aa3a70204a1e1d58ef561a57ab4b8d25817d99fb3feccab4b366167b12.json  query-449ebd98a97ae3ed323079e54c4d8f838dd930168ee3450c42d7b89c6175a69f.json  query-46ab62f79ff1545781e36e31fa059083b77777955b36e857246cb63108846e72.json  query-4b51f57696b0fb91702d9803233b8368d77739c60f4c084b614a9ab97483cf8a.json  query-4d99722139f3b1675306084a1764613bd4e10f6e91146f6ddb644fef6797c529.json  query-51784fd974cbdedf36452e9c595c3cca4229bb0e65c56b3838cb1cf9a363a9dd.json  query-52243a136ee14a41fec46b0cdd9e4ce4738c3ebd07eb6872ed8bf83a9268a123.json  query-538b8e95eecf2c16c7ab8523af73ab84d77ee19841cbc6febd0f948deff6357e.json  query-53f6e584ffbc6aea21dbc68c40069b2060f53970be473f3b9ed6a9e4655b7ec5.json  query-56e8b722e616c03e6b2f6eb2744f0f5626c572229699fc9f1340a9a7357376a7.json  query-59090ad0fc3235d9ca2c6004e47ca63635dfd7e9c2c680bf876ad1f0d5cc8c18.json  query-5983a1f9bdfd09b2ac851847e7cc21f4d17fca616ba1804b3f9579739b4f4d52.json  query-6745864d0b89a5d65b0799fb34526728dfef0327aec798a1bbfce58b7b80adb6.json  query-689fe81c94b2bd9a00ef789e417a28e98de315fdab536c85c450d49096ae925c.json  query-6c7c987b50029df3d40b06d35930cd380b57586f10645cf4e0b934088b4d2882.json  query-7043a30b0ff8ab547442e2f5f74f27c2c898bda55aa5d01101fb9b4a1bde5b46.json  (+34 more)
callback_data_derive/: Cargo.toml
callback_data_derive/src/: lib.rs
libs/callback_data/: Cargo.toml
libs/callback_data/src/: lib.rs
libs/callback_data_derive/: Cargo.toml
libs/callback_data_derive/src/: lib.rs
libs/callback_data_traits/: Cargo.toml
libs/callback_data_traits/src/: lib.rs
movement_tracker/: Cargo.toml
movement_tracker/migrations/: 20240923032546_init_schema.sql  20240924025015_fix_usrs_triggers.sql  20240924094104_remove_notifications_on_user_invalid.sql
movement_tracker/src/: main.rs
movement_tracker/src/bot/: apply.rs  availability.rs  commands.rs  forecast.rs  mod.rs  notify.rs  plan.rs  register.rs  saf100.rs  state.rs  upcoming.rs  user.rs
movement_tracker/src/controllers/: attendance.rs  db.rs  mod.rs  notifications.rs  scheduling.rs  user.rs
movement_tracker/src/healthcheck/: audit.rs  bot.rs  handler.rs  mod.rs  monitor.rs
movement_tracker/src/notifier/: emit.rs  mod.rs  scheduled.rs
movement_tracker/src/utils/: mod.rs
src/: main.rs  types.rs
src/bot/: apply.rs  availability.rs  commands.rs  forecast.rs  mod.rs  notify.rs  plan.rs  planning.rs  register.rs  saf100.rs  state.rs  upcoming.rs  user.rs
src/controllers/: apply.rs  attendance.rs  db.rs  mod.rs  model.rs  notifications.rs  scheduling.rs  user.rs
src/notifier/: emit.rs  mod.rs  scheduled.rs
src/utils/: mod.rs
