[package]
name = "movement-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#teloxide dependencies for interaction with the telegram bot api
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
#sqlx library for connection to postgres database
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}
#tokio runtime for async code
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
dotenvy = "0.15.7"
